# testcase-generator-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: call_process_example.md
src/testcase_generator_mcp/: __main__.py  server.py  tool.py
src/testcase_generator_mcp/prompt/: generate_test_case.md  markdown_to_xmind.md
